	* scripts/compact.in: Removes duplicate file/directory arguments.
	* scripts/pkgget.in: Removes duplicate package arguments.
	* scripts/pkgunpack.in: Removes duplicate package arguments.
	* scripts/pkgbuild.in: Removes duplicate package arguments.
	* scripts/pkgcheck.in: Removes duplicate package arguments.
	* scripts/pkginstall.in: Removes duplicate package arguments.

2004-08-03 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in (source_profile, open_package): Takes
	  package as argument instead of profile.  Searches current working
	  directory before profile directory.
	* scripts/libprometheus.bash.in: Removed find_profiles, add_profiles,
	  $profile_list & $package_list.
	* scripts/pkgget.in: Updated profile handling.
	* scripts/pkgunpack.in: Updated profile handling.
	* scripts/pkgbuild.in: Updated profile handling.
	* scripts/pkgcheck.in: Updated profile handling.
	* scripts/pkginstall.in: Updated profile handling.
	* scripts/pkgadd.in: Updated profile handling.
	* man/pkgget.1.in: Updated.
	* man/pkgunpack.1.in: Updated.
	* man/pkgbuild.1.in: Updated.
	* man/pkgcheck.1.in: Updated.
	* man/pkginstall.8.in: Updated.

	* scripts/pkgget.in: Download files to $srcdir, not current working
	  directory.
	* scripts/libprometheus.bash.in (location_of): Only search $srcdir, not
	  $builddir.

	* scripts/libprometheus.bash.in (source_profile): Only search current
	  working directory if $profiles_cwd is `yes'.
	* scripts/pkgget.in: Updated profile handling.
	* scripts/pkgunpack.in: Updated profile handling.
	* scripts/pkgbuild.in: Updated profile handling.
	* scripts/pkgcheck.in: Updated profile handling.
	* scripts/pkginstall.in: Updated profile handling.
	* scripts/pkgadd.in: Updated profile handling.

	* etc/prometheus.conf: Added $backupdir.
	* man/prometheus.conf.5.in: Documented $backupdir.
	* scripts/pkginstall.in: Added add_version_entry.  Now restores backed
	  up uninstalls if installation fails.
